# P1_TECFLIX

./: CMakeLists.txt  ImgDownloader.cpp  ImgDownloader.h  Page.cpp  Page.h  cURLParser.cpp  cURLParser.h  linkedList.cpp  linkedList.h  linkedlist.cpp  main.cpp  movie.cpp  movie.h  page.cpp  page.h  windowGUI.cpp  windowGUI.h
dataset/: movie_metadata.csv
